2017-03-22 Henry Butowsky  <henryb@hush.com>

	* for CDL output (Netcdf4) print braces in data: when var has an unlimited dim(s) 

2017-03-21  Charlie Zender  <zender@uci.edu>

	* Tidy nco_prn.c

2017-03-21 Henry Butowsky  <henryb@hush.com>

	* Print units in comment for CDL output when dbg_lvl >= 1

2017-03-17  Charlie Zender  <zender@uci.edu>

	* Patch fmc_all_cls.cc to build on OpenSUSE https://sourceforge.net/p/nco/bugs/94

2017-03-16  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.6-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.6-alpha01 final changes';git push
	git tag -a 4.6.6-alpha01 -m 'Version 4.6.6-alpha01 new features: ncremap cmd_wgt fix';git push --tags

	* Fix cmd_wgt reported by ncremap --version

2017-03-15  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.5 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.5 final changes';git push
	git tag -a 4.6.5 -m 'Version 4.6.5 new features: --cnk_csh, EXIT_FAILURE, ncclimo/ncremap version/vrb_lvl, ncks --cal, nfr() refactor, POP fix';git push --tags

2017-03-14  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.5-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.5-beta01 final changes';git push
	git tag -a 4.6.5-beta01 -m 'Version 4.6.5-beta01 new features: unary operation attribute propagation, MSVC fixes, EXIT_FAILURE';git push --tags

	* Tidy nco_prn() and nco_cln_utl() warnings

	* Return with EXIT_FAILURE not EXIT_SUCCESS for bad commandline options

2017-03-13  Charlie Zender  <zender@uci.edu>

	* Henry fixed attribute propagation on ncap2 unary operators

2017-03-11  Charlie Zender  <zender@uci.edu>

	* Print nco_fl_open() INFO messages only once to avoid redundant messages

2017-03-09  Charlie Zender  <zender@uci.edu>

	* Add MSVC workaround to gmtime_r() in fmc_all_cls.cc

	* Add missing stub prototypes to nco_cln_utl.h and fix MSVC compilation

2017-03-09 Henry Butowsky  <henryb@hush.com>
